<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/login_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/register"
                android:textSize="30dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/register_icon1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_baseline_account_circle_24" />

                </RelativeLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">


                <EditText
                    android:id="@+id/register_edit_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="20"
                    android:hint="Email"
                    android:inputType="textEmailAddress" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">


                <EditText
                    android:id="@+id/register_edit_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="20"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">


                <EditText
                    android:id="@+id/register_edit_repeat_password"
                    android:layout_width="299dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/register_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_like_style"
                    android:backgroundTint="#ffd700"
                    android:text="@string/submit" />


            </TableRow>

        </TableLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>