<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter your email and password:" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/login_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email:" />

                <EditText
                    android:id="@+id/login_edit_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="email"
                    android:inputType="textEmailAddress" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/login_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Password:" />

                <EditText
                    android:id="@+id/login_edit_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="password"
                    android:inputType="numberPassword" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/login_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Submit" />

                <Button
                    android:id="@+id/login_register"
                    android:layout_width="220dp"
                    android:layout_height="match_parent"
                    android:text="Register" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>